tests/ui/resolve/unresolved_static_type_field.stderr
error[E0425]: cannot find value `cx` in this scope
  --> $DIR/unresolved_static_type_field.rs:9:11
   |
LL |     cx: bool,
   |     -- a field by that name exists in `Self`
...
LL |         f(cx);
   |           ^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
